--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "main": "/index.js",
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "react-scripts": "1.0.0"
   },
   "name": "ljg0t8",
@@ -13,6 +14,8 @@
   "version": "0.0.0",
   "scripts": {
     "start": "react-scripts start",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
