--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{
+{ 
+  "homepage": "https://github.com/TriTran789/tic-tac-toe",
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -14,8 +15,6 @@
   "version": "0.0.0",
   "scripts": {
     "start": "react-scripts start",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
